# onnx-caffe2

./: .gitignore  .gitmodules  .travis.yml  MANIFEST.in  README.md  install-develop.sh  install.sh  setup.cfg  setup.py  test.sh
.travis/: build.sh  install.sh  setup.sh
examples/: pytorch_to_caffe2.py
jenkins/: build.sh  common  setup.sh  test.sh
manipulation/: README.md
onnx_caffe2/: __init__.py  backend.py  backend_rep.py  error.py  frontend.py  helper.py  type_mapping.py  workspace.py
optimize-onnx/: CMakeLists.txt  README.md  aten  onnx
optimize-onnx/src/: CMakeLists.txt  assertions.cpp  attributes.h  cpp2py.cpp  export.cpp  export.h  graph_node_list.h  import.cpp  import.h  interned_strings.cpp  interned_strings.h  ir.h  main.cpp  optimize.cpp  optimize.h  tensor.h  type.h  wrapper.cpp
tests/: ONNXOpCoverage.md  caffe2_ref_test.py  conversion_test.py  helper_test.py  onnx_backend_test.py  optimize_onnx_test.py  roundtrip_optimize_onnx.py  ssa_test.py  test_utils.py
travis/: after_success.sh  before_install.sh  install.sh  script.sh  setup.sh
